@@ -1,5 +1,10 @@
 2008-08-01  Srinivasa Ragavan  <sragavan@novell.com>
 
+	* camel/camel-exchange-folder.c (search_by_expression): Don't set the
+	summary. Search will pick it automatically.
+
+2008-08-01  Srinivasa Ragavan  <sragavan@novell.com>
+
 	* camel/camel-exchange-summary.c: Read href from db properly.
 
 2008-07-30  Milan Crha  <mcrha@redhat.com>
